# python-text-summarizer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
